--- a/jupyterNotebooks/StockPredictionJN.ipynb
+++ b/jupyterNotebooks/StockPredictionJN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -12,7 +12,6 @@
     "import pandas_datareader as pdr\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
@@ -20,34 +19,19 @@
     "from sklearn.decomposition import PCA\n",
     "from tensorflow.keras.layers import LSTM, Dense, Dropout, Reshape\n",
     "from matplotlib import pyplot as plt\n",
-    "from sklearn.feature_selection import RFE\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
     "import pandas_ta as ta\n",
-    "import talib\n",
-    "from plotly.subplots import make_subplots\n",
-    "import plotly.graph_objects as go\n",
-    "from chart_studio import plotly as py\n",
     "import plotly.tools as tls\n",
-    "from plotly import figure_factory as FF\n",
-    "from sklearn.svm import SVC\n",
     "from sklearn.feature_selection import RFECV\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "import pydot\n",
-    "import graphviz\n",
-    "import math\n",
     "from datetime import date\n",
     "from datetime import timedelta\n",
     "from tensorflow.python.keras.models import load_model\n",
-    "import plotly.express as px\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from tensorflow.keras.utils import plot_model\n",
-    "from statistics import mean"
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "physical_devices = tf.config.list_physical_devices('GPU')\n",
@@ -62,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Specify stock name and corresponding ticker logo\n",
@@ -78,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# get data from yahoo finance for last 10 years\n",
@@ -114,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def performRFE():\n",
@@ -181,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Perform PCA to get new components while maintaining 95% covariance in data\n",
@@ -197,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# prep data using rolling window technique (21 days input) -. (3 days predicted output)\n",
@@ -220,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# use prior 21 days input to predict close price of next 3 days\n",
@@ -243,35 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "lstm (LSTM)                  (None, 21, 600)           1444800   \n",
-      "_________________________________________________________________\n",
-      "lstm_1 (LSTM)                (None, 300)               1081200   \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 128)               38528     \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 64)                8256      \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 3)                 195       \n",
-      "_________________________________________________________________\n",
-      "reshape (Reshape)            (None, 3, 1)              0         \n",
-      "=================================================================\n",
-      "Total params: 2,572,979\n",
-      "Trainable params: 2,572,979\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# build LSTM model for prediction\n",
     "model = Sequential()\n",
@@ -290,7 +247,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -330,13 +288,14 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# get predictions using test set and unscale it\n",
@@ -364,7 +323,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -387,7 +347,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -402,7 +363,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -414,18 +376,21 @@
     "if unscaled_pred[0] < unscaled_pred[numFutureDays - 1] and unscaled_pred[numFutureDays - 1] > df_stockData.iloc[\n",
     "                                                                                              train_size - 1:train_size,\n",
     "                                                                                              3:4].values:\n",
-    "    print(\"Bullish phase predicted for {}\".format(stock_name))"
+    "    print(\"Bullish phase predicted for {}\".format(stock_name))\n",
+    "else:\n",
+    "    print(\"Bearish phase predicted for {}\".format(stock_name))"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "outputs": [],
    "source": [],
    "metadata": {
